--- a/assets/sass/_pages.scss
+++ b/assets/sass/_pages.scss
@@ -13,7 +13,9 @@
     padding:100px 0 0;
     position: relative;
     color: $white;
-
+    @include mobile{
+        padding-top:0;
+    }
     .section-content {
         h2 {
             color: inherit;
@@ -64,7 +66,7 @@
             position: relative;
             .process-label {
                 position: relative;
-
+                cursor: pointer;
                 .label-link {
                     position: relative;
                     @include tablet {
@@ -289,7 +291,7 @@
     #li-planning,
     #li-development,
     #li-launch {
-        &:hover {
+        &:hover, &:active, &:focus {
             .block-description {
                 opacity: 1;
                 height: auto;
@@ -725,6 +727,7 @@
             }
             @include mobile {
                 padding-left: 20px;
+                padding-top:20px;
             }
             .form {
 
